feat(notifications): add nana endpoint for webhook
